What's new...

Nov 27/2024 : JF/74.0
 - fix more VNC key binding issues
 - added speex DSP init : echo cancel buffer size param (user request)
 - jfHex/HexBig : added Page Up/down
 - gl.ModelJSON : fixed face order

Nov 14/2024 : JF/73.0
 - fix VNC copy rect encoding
 - fix VNC key events and mouse wheel events
 - jfRemote/0.4 & 0.5
   - VNC improvements
 - improve .blend 3d file loading
 - add .obj 3d file loading
 - add .json 3d file loading
 - improve graal support
 - add speex DSP (user request)
 - jfPhone/1.34
   - add option to use speex DSP for echo cancellation
   - used only in speaker phone mode
   - can be used with any codec
 - jfPaint/0.28
   - add CTRL+PAGE_UP/PAGE_DOWN to cycle thru tabs

Oct 25/2024 : JF/72.0
  - VoIP improvements
    - improve SDP returned by OPTIONS request (was missing IP)
  - jfPhone/1.33
  - jfRemote/0.2
    - replaced rdesktop with freerdp (available for Windows too)
    - created Windows MSI package
  - jfTerm/0.23
    - added CloseTab menu option
    - slowed down paste operation
  - jfMQTT/0.5
    - viewer : added clear messages button

Oct 18/2024 : JF/71.0
  - VoIP improvements
    - fix : missing contact in BYE reply (fix issue #23)
    - add : reply to OPTIONS request (fix issue #24)
  - added FTPS and SFTP
  - jfPhone/1.32

Oct 15/2024 : JF/70.1
  - jfDVR : greatly reduced viewer memory requirements

Oct 7/2024 : JF/70.0
  - VoIP : added speex 8k,16k,32k audio codec (issue #21)
  - VoIP : use "sip" prefix in URI for message() (issue #22)
    - default can be changed with SIPClient.setMessageURI()
  - jfPhone/1.31
    - added support for speex,speex16,speex32
  - debian/fedora repos
    - URL now includes a component for OS version
    - this is required mainly because of ffmpeg
    - sym links are used for old URLs
      - debian:bookworm
      - fedora:40
  - linux loader improvements
    - no longer links against X11 and other libs
      - only libc and libm are required
    - improved Java location detection
